--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
@@ -63,8 +63,8 @@
                         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
+            </div>
         </footer>
-    </div>
     {% block javascripts %}
         <script src="{{ asset('js/UserMenu.js') }}"></script>
         <script src="{{ asset('js/StatusFilter.js') }}"></script>
