--- a/templates/concerts/changeConcertDate.html.twig
+++ b/templates/concerts/changeConcertDate.html.twig
@@ -20,7 +20,7 @@
         }) }}</p>
         
         <div class="btn-block">
-            <p><a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" class="btn" value="Retour"></a>
+            <a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" class="btn" value="Retour"></a>
             <input type="submit" class="btn" value="Confirmer">
         </div>
 
