--- a/templates/concerts/concertForm.html.twig
+++ b/templates/concerts/concertForm.html.twig
@@ -146,7 +146,7 @@
                         <label>Choisir une image : </label>
                     </div>
                     <div class="create-block__form__each--input">
-                        {{ form_row(createForm.imagePath, {
+                        <p>{{ form_row(createForm.imagePath, {
                             'label': ' ',
                             }) 
                         }}</p>
@@ -170,7 +170,7 @@
                         <label>Intégrer une vidéo YouTube : <i class="far fa-question-circle" title="Veuillez coller l'URL complète de la vidéo YouTube"></i></label>
                     </div>
                     <div class="create-block__form__each--input">
-                        {{ form_row(createForm.videoURL, {
+                        <p>{{ form_row(createForm.videoURL, {
                             'label': ' ',
                             }) 
                         }}
