--- a/templates/security/passwordForgotten.html.twig
+++ b/templates/security/passwordForgotten.html.twig
@@ -28,7 +28,7 @@
                 </div>       
                 {{ form_end(userEmailForm) }}
             {% elseif isUser %}
-                <p class="important-text">Un nouveau mot de passe vous a été envoyé sur votre adresse e-mail</p>
+                <p><span class="important-text">Un nouveau mot de passe vous a été envoyé sur votre adresse e-mail</p>
                 <div class="btn-block">
                     <a href="{{ path('index') }}"><input type="button" class="btn" value="Retour">
                 </div>
