--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -28,7 +28,7 @@
                         } 
                     }) 
                 }}</p>
-                {{ form_row(registerForm.confirmPassword, { 
+                <p>{{ form_row(registerForm.confirmPassword, { 
                     'required': 'true', 
                     'label': ' ', 
                     'attr': {
